--- a/website/templates/macros/_eventform.j2
+++ b/website/templates/macros/_eventform.j2
@@ -12,7 +12,7 @@
     {{ render_field(form.end_date) }}
 </div>
 <div class="col-12">
-    {{ render_field(form.name) }}
+    {{ render_field(form.title) }}
 </div>
 <div class="col-12">
     {{ render_field(form.description) }}
