--- a/website/templates/events/add_event.j2
+++ b/website/templates/events/add_event.j2
@@ -1,6 +1,7 @@
 {%- extends "base.j2" -%}
 
 {%- from "macros/_eventform.j2" import render_event_form -%}
+{%- from "macros/_eventeditor.j2" import render_event_editor -%}
 
 {%- block page_title -%}Add Event{%- endblock -%}
 
@@ -22,19 +23,6 @@
     </form>
 </section>
 {%- endblock -%}
-{#
-NOTE: Plugins will not be removed if their required dependencies are not removed as well.
-indent -> indentlist -> list
-#}
-{%- set simple_text_config = "removePlugins: [
-'about','clipboard','editortoolbar','floatingspace','indent','indentlist','list',
-'notification','spellchecker','uibutton','undo'
-],
-toolbar: [
-{ name: 'basicstyles', items: [ 'Bold', 'Italic' ] },
-{ name: 'links', items: [ 'Link', 'Unlink' ] }]" -%}
 {%- block js -%}
-{{ ckeditor.load(custom_url=url_for("static", filename="ckeditor/basic/ckeditor.js")) }}
-{{ ckeditor.config(name="name", height=60, custom_config=simple_text_config) }}
-{{ ckeditor.config(name="description", custom_config=simple_text_config) }}
+{{ render_event_editor(ckeditor) }}
 {%- endblock -%}
