--- a/website/templates/research/edit_project.j2
+++ b/website/templates/research/edit_project.j2
@@ -23,5 +23,5 @@
 </section>
 {%- endblock -%}
 {%- block js -%}
-{{ {{ render_project_editor(ckeditor) }} }}
+{{ render_project_editor(ckeditor) }}
 {%- endblock -%}
