--- a/website/templates/research/current_ugrad_projects.j2
+++ b/website/templates/research/current_ugrad_projects.j2
@@ -12,7 +12,8 @@
         {%- if debug -%}
         <div class="col-3 col-6-small col-12-xsmall">
             <ul class="actions stacked col-3 col-6-small col-12-xsmall">
-                <li><a class="button primary fit" href="{{ url_for('research.add_project') }}">Add Project</a></li>
+                <li><a class="solid icon fa-plus button primary fit" href="{{ url_for('research.add_project') }}">Add
+                        Project</a></li>
             </ul>
         </div>
         {%- endif -%}
