update the research module

--- a/website/templates/macros/_projecthelper.j2
+++ b/website/templates/macros/_projecthelper.j2
@@ -4,21 +4,22 @@
     <a class="image"><img src="{{ project.image }}" /></a>
     <h2 class="h3">{{ project.title }}</h2>
 
-    {%- if project.adivsors is not none -%}
-    <h3 class="h4">{{ project.advisors }}</h3>
+    {%- if project.advisors -%}
+    <h3 class="h4">Co-Advisors: {{ project.advisors }}</h3>
     {%- endif -%}
 
-    <h3 class="h4">{{ project.students }}</h3>
+    <h3 class="h4">Students: {{ project.students }}</h3>
 
-    {%- if project.majors is not none -%}
-    <h4 class="h5">{{ project.majors }}</h4>
+    {%- if project.majors -%}
+    <h4 class="h5">Majors: {{ project.majors }}</h4>
     {%- endif -%}
 
-    <p>{{ project.description }}</p>
+    {{ project.description }}
 
-    {%- if project.url is not none -%}
+    {%- if project.link -%}
     <ul class="actions">
-        <li>{{ project.url }}</li>
+        {%- set button = project.link.replace("<a ", '<a class="button"') -%}
+        <li>{{ button }}</li>
     </ul>
     {%- endif -%}
 
