--- a/website/templates/events/edit_event.j2
+++ b/website/templates/events/edit_event.j2
@@ -15,7 +15,7 @@
             {{ render_event_form(form)}}
             <div class="col-12">
                 <ul class="actions">
-                    <li><input id="submit" class="primary" name="submit" type="submit" value="Update event"></li>
+                    <li><input class="primary" name="edit_event" type="submit" value="Update event"></li>
                     <li><a href="{{ url_for('events.future_events') }}" class="button">Cancel</a></li>
                 </ul>
             </div>
